--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -183,12 +183,12 @@ nav:
   - Resources:
       - Books:
         - Microservices on Kubernetes : resources/books/k8s.md        
-      - YouTube Videos:
+      - Videos:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
   - About:
       - About: about/about.md
-      - Profile : about/profile.md
-      - Accomplishments : about/accomplishments.md
+      # - Profile : about/profile.md
+      # - Accomplishments : about/accomplishments.md
   - Contact:
       - Contact Us: contact.md
