f1 visa documentation added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -192,3 +192,4 @@ nav:
       # - Accomplishments : about/accomplishments.md
   - Contact:
       - Contact Us: contact.md
+        # - F1 Visa Processing: f1-visa.md
