--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -189,6 +189,8 @@ nav:
       - Videos:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
+  - Articles:
+      - Namespace Stuck: articles/namespace-stuck.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
