--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -191,6 +191,7 @@ nav:
         - Azure Cloud : resources/azure-cloud.md
   - Articles:
       - Namespace Stuck: articles/namespace-stuck.md
+      - Undoing changes with git reset: articles/git-reset.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
