--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -190,8 +190,10 @@ nav:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
   - Articles:
-      - Namespace Stuck: articles/namespace-stuck.md
+      - Delete PV and PVC stuck in terminating state: articles/pv-pvc-stuck.md
+      - Kubernetes Namespace Stuck: articles/namespace-stuck.md
       - Undoing changes with git reset: articles/git-reset.md
+      - Hiding the Full path in VSCode Terminal:  articles/hide-full-path.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
