Interacting with Azure App Service using a publishing profile

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -194,6 +194,7 @@ nav:
       - Kubernetes Namespace Stuck: articles/namespace-stuck.md
       - Undoing changes with git reset: articles/git-reset.md
       - Hiding the Full path in VSCode Terminal:  articles/hide-full-path.md
+      - Interacting with Azure App Service:  articles/app-service-publishing-profile.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
