--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -199,6 +199,7 @@ nav:
       - Single Sign-On - Introduction:  articles/single-sign-on.md
       - Single Sign-On - OAuth 2.0 flows:  articles/oatuh2.0-flows.md
       - Getting Started with Keycloak:  articles/keycloak.md
+      - Exploring Docker Fundamentals:  articles/docker-fundamentals.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
