--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -200,6 +200,7 @@ nav:
       - Single Sign-On - OAuth 2.0 flows:  articles/oatuh2.0-flows.md
       - Getting Started with Keycloak:  articles/keycloak.md
       - Exploring Docker Fundamentals:  articles/docker-fundamentals.md
+      - What are Development Containers?:  articles/dev-containers-introduction.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
