--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -201,6 +201,7 @@ nav:
       - Getting Started with Drupal:  articles/drupal.md
       - Exploring Docker Fundamentals:  articles/docker-fundamentals.md
       - What are Development Containers?:  articles/dev-containers-introduction.md
+      - Setting up Mac Terminal with Oh-My-Zsh:  articles/mac-terminal-setup.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
