--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -193,6 +193,12 @@ nav:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
   - Articles:
+      - Azure Application Availability Alerts Setup:  articles/app-availability-alert.md
+      - Azure Log Alerts Setup:  articles/azure-log-alerts.md
+      - Getting Started with Keycloak:  articles/keycloak.md
+      - Getting Started with Drupal:  articles/drupal.md
+      - Exploring Docker Fundamentals:  articles/docker-fundamentals.md
+      - What are Development Containers?:  articles/dev-containers-introduction.md
       - Delete PV and PVC stuck in terminating state: articles/pv-pvc-stuck.md
       - Kubernetes Namespace Stuck: articles/namespace-stuck.md
       - Undoing changes with git reset: articles/git-reset.md
@@ -200,13 +206,7 @@ nav:
       - Interacting with Azure App Service:  articles/app-service-publishing-profile.md
       - Single Sign-On - Introduction:  articles/single-sign-on.md
       - Single Sign-On - OAuth 2.0 flows:  articles/oatuh2.0-flows.md
-      - Getting Started with Keycloak:  articles/keycloak.md
-      - Getting Started with Drupal:  articles/drupal.md
-      - Exploring Docker Fundamentals:  articles/docker-fundamentals.md
-      - What are Development Containers?:  articles/dev-containers-introduction.md
       - Setting up Mac Terminal with Oh-My-Zsh:  articles/mac-terminal-setup.md
-      - Azure Log Alerts Setup:  articles/azure-log-alerts.md
-      # - Alerts Setup in Azure Application Insights:  articles/application-insights-alerts.md
   - About:
       - About: about/about.md
       # - Profile : about/profile.md
