created home page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,9 @@ site_description: >-
 theme:
   name: material # readthedocs
   custom_dir: docs/overrides
+  # 404 page
+  static_templates:
+    - 404.html
   # nav_style: dark
   shortcuts:
       help: 191    # ?
@@ -63,7 +66,9 @@ theme:
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
-  
+  icon:  # from .icons path. Add to theme override for custom logo.
+    logo: ak-logo  # top left header logo  
+  favicon: assets/ak-logo.ico #browser tab logo
   # extra_css:
   #     - css/custom.css
 
@@ -146,7 +151,7 @@ hide:
 
 # copyright   
 copyright: |
-  Copyright &copy; 2023 <a href="akeesari.github.io/anjikeesari"  target="_blank" rel="noopener">Anji Keesari</a>
+  Copyright &copy; 2024 <a href="akeesari.github.io/anjikeesari"  target="_blank" rel="noopener">Anji Keesari</a>
 
 
 # Page tree
