--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -199,6 +199,7 @@ nav:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
   - Articles:
+      - Create Website using Material for MkDocs:  articles/mkdocs-setup.md
       - Azure Application Availability Alerts Setup:  articles/app-availability-alert.md
       - Azure Log Alerts Setup:  articles/azure-log-alerts.md
       - Getting Started with Keycloak:  articles/keycloak.md
