Cloud Compare Cheat Sheet

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,6 +179,7 @@ nav:
         - Azure CLI Cheat Sheet: developertools/cheatsheets/az-cli-cheat-sheet.md
         - AZ ACR Cheat Sheet: developertools/cheatsheets/az-acr-cheat-sheet.md
         - Terraform Cheat Sheet: developertools/cheatsheets/terraform-cheat-sheet.md
+        - Cloud Compare Cheat Sheet: developertools/cheatsheets/cloud-comare-cheat-sheet.md
         - Dig Cheat Sheet: developertools/cheatsheets/dig-cheat-sheet.md
         
   # - Technology Stack:        
