--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -233,6 +233,10 @@ nav:
       # - Accomplishments : about/accomplishments.md
   - Contact:
       - Contact Us: contact.md
+  # - personal:
+  #     - Breakfast Recipes: personal/breakfast-recipes.md
+  #     - Lunch Recipes: personal/lunch-recipes.md
+  #     - Dinner Recipes: personal/dinner-recipes.md
         # - F1 Visa Processing: f1-visa.md
   # - Terraform:
   #     - Table of Contents: terraform/1-toc.md
