--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -199,8 +199,9 @@ nav:
   #       - QA Automation : techstack/testing.md
   - Resources:
       - Books:
-        - Microservices on Kubernetes : resources/books/k8s.md        
-        - Building Microservices with Containers : resources/books/micros.md
+        - Building Microservices with Containers : resources/books/microservices.md
+        - Microservices on Kubernetes : resources/books/kubernetes.md
+        
       - Videos:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
