--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,8 +70,6 @@ theme:
   icon:  # from .icons path. Add to theme override for custom logo.
     logo: ak-logo  # top left header logo  
   favicon: assets/ak-logo.ico #browser tab logo
-  # extra_css:
-  #     - css/custom.css
 
   extra_javascript:
   - javascripts/extra.js
@@ -79,6 +77,9 @@ theme:
   - https://polyfill.io/v3/polyfill.min.js #?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
+extra_css:
+    - stylesheets/extra.css
+    
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
