--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -171,7 +171,10 @@ nav:
         - Mac OS: developertools/software/mac.md
       - Tools:
         - Useful Tools: developertools/tools/useful-tools.md
-        # - PostgreSQL Installation: developertools/postgresql-installation.md
+      - AI Engineering:
+        - AI Concepts: developertools/ai-engineering/ai-concepts.md
+        - Learning Roadmap: developertools/ai-engineering/ai-learning-roadmap.md
+        - Technology Stack: developertools/ai-engineering/ai-technology-stack.md
       - Cheat Sheets:
         - Git Cheat Sheet: developertools/cheatsheets/git-cheat-sheet.md
         - Dockerfile Cheat Sheet: developertools/cheatsheets/dockerfile-cheat-sheet.md        
