updated windows installs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -242,7 +242,8 @@ nav:
   - Contact:
       - Contact Us: contact.md
   # - personal:
-  #     - Breakfast Recipes: personal/breakfast-recipes.md
+  #     - Yosemite Clouds Rest: personal/yosemite-clouds-rest.md
+      # - Breakfast Recipes: personal/breakfast-recipes.md
   #     - Lunch Recipes: personal/lunch-recipes.md
   #     - Dinner Recipes: personal/dinner-recipes.md
         # - F1 Visa Processing: f1-visa.md
