--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -204,10 +204,13 @@ nav:
   #       - Node JS : techstack/node-js.md
   #       - QA Automation : techstack/testing.md
   - Resources:
+      - Publications:
+        - Messaging Architecture : resources/publications/messaging-architecture/messaging-architecture.md
+        
       - Books:
         - Building Microservices with Containers : resources/books/microservices.md
         - Microservices on Kubernetes : resources/books/kubernetes.md
-        
+
       - Videos:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
