article page changes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,11 +59,15 @@ theme:
   palette: 
     # Palette toggle for light mode
     - scheme: default
+      primary: indigo
+      accent: blue
       toggle:
         icon: material/toggle-switch-off-outline 
         name: Switch to dark mode
     # Palette toggle for dark mode
     - scheme: slate
+      primary: indigo
+      accent: blue
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
