--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 
 # Project information
 site_name: Anji Keesari
-site_url: https://akeesari.github.io/anjikeesari/
+site_url: https://anjikeesari.com/
 
 # edit_uri: edit/main/docs/
 
