--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ theme:
   
   language: en
   
-  # use_directory_urls: true
+  use_directory_urls: true
 
   palette: 
     # Palette toggle for light mode
@@ -77,7 +77,6 @@ theme:
 
 extra_javascript:
   - javascripts/extra.js
-  - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js #?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
@@ -146,8 +145,6 @@ plugins:
      # Adding the pdf-export plugin
   # - pdf-export:
   #     combined: true
-hide:
-  - footer
 # google_analytics: ["UA-118407822-1", "kubernetes.github.io"]
 
 
