Phase 1: Fix URL structure - use index.md for clean URLs
- Renamed about/about.md to about/index.md (URL: /about/ instead of /about/about/)
- Moved contact.md to contact/index.md for better organization
- Moved developertools/introduction/introduction.md to developertools/index.md (URL: /developertools/)
- Updated mkdocs.yml navigation paths for all three changes
- Fixed all internal relative links in about/index.md, research/index.md, and developertools/index.md
- Updated site_url to https://anjikeesari.com (removed trailing slash)
- Fixed extra.js hardcoded redirect from /anjikeesari/ to /
- Updated CI workflow to use requirements.txt
- Enabled use_directory_urls in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -161,7 +161,7 @@ nav:
   #   - Blogs: blogs.md
   
   - About:
-      - About: about/about.md
+      - About: about/index.md
       # - Profile : about/profile.md
       # - Accomplishments : about/accomplishments.md
   
@@ -199,8 +199,7 @@ nav:
       - Setting up Windows Terminal with Oh-My-Posh:  articles/windows-terminal-setup.md
   
   - Developer Tools:
-      - Introduction:
-        - Introduction: developertools/introduction/introduction.md
+      - Overview: developertools/index.md
       - Download & Install software:
         - Developer Workstation Configuration: developertools/software/workstation.md    
         - Windows OS: developertools/software/windows.md
@@ -244,7 +243,7 @@ nav:
         - .NET Core Web API : resources/webapi.md
         - Azure Cloud : resources/azure-cloud.md
   - Contact:
-      - Contact Us: contact.md
+      - Contact Us: contact/index.md
   # - personal:
   #     - Yosemite Clouds Rest: personal/yosemite-clouds-rest.md
       # - Breakfast Recipes: personal/breakfast-recipes.md
